--- a/packages/cubejs-api-gateway/package.json
+++ b/packages/cubejs-api-gateway/package.json
@@ -45,6 +45,7 @@
     "moment-timezone": "^0.5.27",
     "nexus": "^1.1.0",
     "node-fetch": "^2.6.1",
+    "proxy-agent": "^6.4.0",
     "ramda": "^0.27.0",
     "uuid": "^8.3.2"
   },
